// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`welcome in bento snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f4f4f5",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f4f4f5",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          {
            "gap": 16,
            "padding": 24,
          }
        }
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "gap": 6,
              "marginBottom": 24,
              "marginTop": 32,
            }
          }
        >
          <Text
            style={
              {
                "color": "#0a0a0a",
                "fontSize": 32,
                "fontWeight": "700",
                "letterSpacing": -1,
              }
            }
          >
            Expyrico
          </Text>
          <Text
            style={
              {
                "color": "#71717a",
                "fontSize": 16,
              }
            }
          >
            Track what you have. Never waste again.
          </Text>
        </View>
        <View
          style={
            [
              {
                "borderWidth": 1,
                "overflow": "hidden",
              },
              {
                "borderColor": "#e4e4e7",
                "borderRadius": 18,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "transparent",
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
          >
            <ViewManagerAdapter_ExpoBlurView
              blurReductionFactor={4}
              experimentalBlurMethod="none"
              intensity={40}
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              tint="light"
            />
          </View>
          <View
            style={
              [
                {
                  "gap": 12,
                  "padding": 18,
                },
                {
                  "backgroundColor": "#ffffff",
                },
              ]
            }
          >
            <View
              accessibilityLabel="Sign in"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "minHeight": 48,
                    "paddingHorizontal": 18,
                    "paddingVertical": 14,
                  },
                  {
                    "backgroundColor": "#0a0a0a",
                    "borderRadius": 14,
                    "opacity": 1,
                  },
                  false,
                ]
              }
              testID="welcome-sign-in"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "color": "#ffffff",
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  Sign in
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="Create account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "minHeight": 48,
                    "paddingHorizontal": 18,
                    "paddingVertical": 14,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderRadius": 14,
                    "opacity": 1,
                  },
                  false,
                ]
              }
              testID="welcome-sign-up"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "color": "#0a0a0a",
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  Create account
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`welcome in clay snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#fff7f0",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#fff7f0",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          {
            "gap": 16,
            "padding": 24,
          }
        }
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "gap": 6,
              "marginBottom": 24,
              "marginTop": 32,
            }
          }
        >
          <Text
            style={
              {
                "color": "#5b3a1f",
                "fontSize": 36,
                "fontWeight": "800",
                "letterSpacing": -1,
              }
            }
          >
            Expyrico
          </Text>
          <Text
            style={
              {
                "color": "#a47148",
                "fontSize": 17,
              }
            }
          >
            Track what you have. Never waste again.
          </Text>
        </View>
        <View
          style={
            [
              {
                "borderWidth": 1,
                "overflow": "hidden",
              },
              {
                "borderColor": "#fde0c2",
                "borderRadius": 22,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "transparent",
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
          >
            <ViewManagerAdapter_ExpoBlurView
              blurReductionFactor={4}
              experimentalBlurMethod="none"
              intensity={40}
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              tint="light"
            />
          </View>
          <View
            style={
              [
                {
                  "gap": 12,
                  "padding": 18,
                },
                {
                  "backgroundColor": "#ffffff",
                },
              ]
            }
          >
            <View
              accessibilityLabel="Sign in"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "minHeight": 48,
                    "paddingHorizontal": 18,
                    "paddingVertical": 14,
                  },
                  {
                    "backgroundColor": "#ea580c",
                    "borderRadius": 16,
                    "opacity": 1,
                  },
                  false,
                ]
              }
              testID="welcome-sign-in"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "color": "#ffffff",
                        "fontSize": 15,
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  Sign in
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="Create account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "minHeight": 48,
                    "paddingHorizontal": 18,
                    "paddingVertical": 14,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderRadius": 16,
                    "opacity": 1,
                  },
                  false,
                ]
              }
              testID="welcome-sign-up"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "color": "#5b3a1f",
                        "fontSize": 15,
                        "fontWeight": "700",
                      },
                    ]
                  }
                >
                  Create account
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`welcome in expyrico snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#0b0a17",
      "flex": 1,
      "opacity": 1,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#0b0a17",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          {
            "gap": 16,
            "padding": 24,
          }
        }
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "gap": 6,
              "marginBottom": 24,
              "marginTop": 32,
            }
          }
        >
          <Text
            style={
              {
                "color": "#fafafa",
                "fontSize": 36,
                "fontWeight": "400",
                "letterSpacing": -1,
              }
            }
          >
            Expyrico
          </Text>
          <Text
            style={
              {
                "color": "rgba(250,250,250,0.7)",
                "fontSize": 16,
              }
            }
          >
            Track what you have. Never waste again.
          </Text>
        </View>
        <View
          style={
            [
              {
                "borderWidth": 1,
                "overflow": "hidden",
              },
              {
                "borderColor": "rgba(255,255,255,0.12)",
                "borderRadius": 20,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "transparent",
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
          >
            <ViewManagerAdapter_ExpoBlurView
              blurReductionFactor={4}
              experimentalBlurMethod="none"
              intensity={40}
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              tint="dark"
            />
          </View>
          <View
            style={
              [
                {
                  "gap": 12,
                  "padding": 18,
                },
                {
                  "backgroundColor": "rgba(255,255,255,0.08)",
                },
              ]
            }
          >
            <View
              accessibilityLabel="Sign in"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "minHeight": 48,
                    "paddingHorizontal": 18,
                    "paddingVertical": 14,
                  },
                  {
                    "backgroundColor": "#a855f7",
                    "borderRadius": 14,
                    "opacity": 1,
                  },
                  false,
                ]
              }
              testID="welcome-sign-in"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "color": "#ffffff",
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  Sign in
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="Create account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "minHeight": 48,
                    "paddingHorizontal": 18,
                    "paddingVertical": 14,
                  },
                  {
                    "backgroundColor": "rgba(255,255,255,0.06)",
                    "borderRadius": 14,
                    "opacity": 1,
                  },
                  false,
                ]
              }
              testID="welcome-sign-up"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "color": "#fafafa",
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  Create account
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;

exports[`welcome in material snapshot 1`] = `
<View
  collapsable={false}
  style={
    {
      "backgroundColor": "#f0e8ff",
      "flex": 1,
      "opacity": 0,
    }
  }
>
  <View
    style={
      {
        "flex": 1,
      }
    }
  >
    <RNCSafeAreaView
      edges={
        {
          "bottom": "additive",
          "left": "additive",
          "right": "additive",
          "top": "additive",
        }
      }
      style={
        [
          {
            "flex": 1,
          },
          {
            "backgroundColor": "#f0e8ff",
          },
        ]
      }
    >
      <View
        contentContainerStyle={
          {
            "gap": 16,
            "padding": 24,
          }
        }
        style={
          {
            "flex": 1,
          }
        }
      >
        <View
          style={
            {
              "alignItems": "center",
              "gap": 6,
              "marginBottom": 24,
              "marginTop": 32,
            }
          }
        >
          <Text
            style={
              {
                "color": "#1d1b20",
                "fontSize": 36,
                "fontWeight": "400",
                "letterSpacing": -1,
              }
            }
          >
            Expyrico
          </Text>
          <Text
            style={
              {
                "color": "#65558f",
                "fontSize": 16,
              }
            }
          >
            Track what you have. Never waste again.
          </Text>
        </View>
        <View
          style={
            [
              {
                "borderWidth": 1,
                "overflow": "hidden",
              },
              {
                "borderColor": "#e0e0e0",
                "borderRadius": 24,
              },
            ]
          }
        >
          <View
            style={
              [
                {
                  "backgroundColor": "transparent",
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
          >
            <ViewManagerAdapter_ExpoBlurView
              blurReductionFactor={4}
              experimentalBlurMethod="none"
              intensity={40}
              style={
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                }
              }
              tint="light"
            />
          </View>
          <View
            style={
              [
                {
                  "gap": 12,
                  "padding": 18,
                },
                {
                  "backgroundColor": "#ffffff",
                },
              ]
            }
          >
            <View
              accessibilityLabel="Sign in"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "minHeight": 48,
                    "paddingHorizontal": 18,
                    "paddingVertical": 14,
                  },
                  {
                    "backgroundColor": "#65558f",
                    "borderRadius": 16,
                    "opacity": 1,
                  },
                  false,
                ]
              }
              testID="welcome-sign-in"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "color": "#ffffff",
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  Sign in
                </Text>
              </View>
            </View>
            <View
              accessibilityLabel="Create account"
              accessibilityRole="button"
              accessibilityState={
                {
                  "busy": undefined,
                  "checked": undefined,
                  "disabled": undefined,
                  "expanded": undefined,
                  "selected": undefined,
                }
              }
              accessibilityValue={
                {
                  "max": undefined,
                  "min": undefined,
                  "now": undefined,
                  "text": undefined,
                }
              }
              accessible={true}
              collapsable={false}
              focusable={true}
              onBlur={[Function]}
              onClick={[Function]}
              onFocus={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                [
                  {
                    "minHeight": 48,
                    "paddingHorizontal": 18,
                    "paddingVertical": 14,
                  },
                  {
                    "backgroundColor": "#ffffff",
                    "borderRadius": 16,
                    "opacity": 1,
                  },
                  false,
                ]
              }
              testID="welcome-sign-up"
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 8,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  style={
                    [
                      {},
                      {
                        "color": "#1d1b20",
                        "fontSize": 14,
                        "fontWeight": "500",
                      },
                    ]
                  }
                >
                  Create account
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RNCSafeAreaView>
  </View>
</View>
`;
